first version of documentation for opticalglass package

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,11 @@ wheels/
 *.egg
 MANIFEST
 
+# Documentation
+_build
+_static
+_templates
+
 # Jupyter Notebook
 .ipynb_checkpoints
 glassmapviewer.ui
