--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -16,5 +16,13 @@ sphinx:
    builder: html
    configuration: docs/conf.py
 
+python:
+   install:
+     - method: pip
+       path: .
+
 conda:
-   environment: ./environment.yml
+   environment: environment.yml
+
+submodules:
+  include: all
