try a straight pip, no conda solution

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -18,11 +18,9 @@ sphinx:
 
 python:
    install:
+     - requirements: docs/requirements.txt
      - method: pip
        path: .
-
-conda:
-   environment: environment.yml
 
 submodules:
   include: all
