try to fix version number problem

--- a/setup.cfg
+++ b/setup.cfg
@@ -84,7 +84,7 @@ data = *.xlsx, *.xls, *.txt
 # CAUTION: --cov flags may prohibit setting breakpoints while debugging.
 #          Comment those flags to avoid this pytest issue.
 addopts =
-    --cov opticalglass --cov-report term-missing
+#    --cov opticalglass --cov-report term-missing
     --verbose
 norecursedirs =
     dist
