--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,15 +1,15 @@
 # Requirements file for ReadTheDocs, check .readthedocs.yml.
 # To build the module reference correctly, make sure every external package
 # under `install_requires` in `setup.cfg` is also listed here!
-sphinx>=6.2.1
-numpy>=1.24.3
-scipy>=1.10.1
-matplotlib>=3.7.1
-pandas>=2.0.2
-xlrd>=2.0.1
-openpyxl>=3.1.2
-requests>=2.31.0
-pyyaml>=6.0
+sphinx==6.2.1
+numpy==1.24.3
+scipy==1.10.1
+matplotlib==3.7.1
+pandas==2.0.2
+xlrd==2.0.1
+openpyxl==3.1.2
+requests==2.31.0
+pyyaml==6.0
 pyqt5<5.16
-ipython>=8.13.0
+ipython==8.13.0
 # sphinx_rtd_theme
