--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -4,9 +4,9 @@
 #
 #    pip-compile --output-file=requirements_311.txt setup.py
 #
-matplotlib==3.8.3
+matplotlib==3.9.2
     # via opticalglass (setup.py)
-numpy==1.26.4
+numpy==2.1.13
     # via
     #   contourpy
     #   matplotlib
@@ -15,17 +15,17 @@ numpy==1.26.4
     #   scipy
 openpyxl==3.1.2
     # via opticalglass (setup.py)
-pandas==2.2.1
+pandas==2.2.3
     # via opticalglass (setup.py)
-pyqt5==5.15.10
+pyside6==6.7.3
     # via opticalglass (setup.py)
 pyyaml==6.0.1
     # via opticalglass (setup.py)
-requests==2.32.0
+requests==2.32.3
     # via opticalglass (setup.py)
-scipy==1.12.0
+scipy==1.14.1
     # via opticalglass (setup.py)
 xlrd==2.0.1
     # via opticalglass (setup.py)
-sphinx==7.2.6
-sphinx_rtd_theme==2.0.0
+sphinx==8.1.3
+sphinx_rtd_theme==3.0.2
