--- a/setup.cfg
+++ b/setup.cfg
@@ -42,15 +42,15 @@ package_dir =
 # new major versions. This works if the required packages follow Semantic Versioning.
 # For more information, check out https://semver.org/.
 install_requires =
-    numpy>=1.26.4
-    scipy>=1.12.0
-    matplotlib>=3.8.3
-    pandas>=2.2.1
+    numpy>=2.1.3
+    scipy>=1.14.1
+    matplotlib>=3.9.2
+    pandas>=2.2.3
     xlrd>=2.0.1
     openpyxl>=3.1.2
-    requests>=2.31.0
+    requests>=2.32.3
     pyyaml>=6.0.1
-    pyqt5<5.16
+    pyside6>=6.7.3
 
 
 [options.packages.find]
