--- a/setup.cfg
+++ b/setup.cfg
@@ -19,8 +19,9 @@ platforms = any
 # Add here all kinds of additional classifiers as defined under
 # https://pypi.org/classifiers/
 classifiers =
-    Programming Language :: Python :: 3.10
     Programming Language :: Python :: 3.11
+    Programming Language :: Python :: 3.12
+    Programming Language :: Python :: 3.13
     License :: OSI Approved :: BSD License
     Operating System :: OS Independent
     Topic :: Scientific/Engineering :: Physics
@@ -35,7 +36,7 @@ package_dir =
     =src
 
 # Require a min/specific Python version (comma-separated conditions)
-# python_requires = >=3.8
+python_requires = >=3.11
 
 # Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
 # Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
@@ -48,7 +49,7 @@ install_requires =
     pandas>=2.2.3
     xlrd>=2.0.1
     openpyxl>=3.1.2
-    requests>=2.32.3
+    requests>=2.32.4
     pyyaml>=6.0.1
     pyside6>=6.7.3
 
