--- a/setup.cfg
+++ b/setup.cfg
@@ -50,6 +50,7 @@ install_requires =
     xlrd>=2.0.1
     openpyxl>=3.1.5
     requests>=2.32.4
+    json_tricks>=3.17.3
     pyyaml>=6.0.2
     pyside6>=6.9.1
 
